--- a/DemoMVC.WebUi/Views/Question/_QuestionDetailsPopUp.cshtml
+++ b/DemoMVC.WebUi/Views/Question/_QuestionDetailsPopUp.cshtml
@@ -160,13 +160,13 @@
 
 
                         @*Show All Images Of Questions*@
-                        @if (Model.QuestionImage != null && Model.QuestionImage.Any())
+                        @if (Model.QuestionImages != null && Model.QuestionImages.Any())
                         {
                             <div id="questionImageCarousel" class="carousel slide mb-4" data-bs-ride="carousel" style="width: 600px; height: 350px; margin: 0 auto; overflow: hidden; border-radius: 10px;">
                                 <div class="carousel-inner w-100 h-100">
-                                    @for (int i = 0; i < Model.QuestionImage.Count; i++)
+                                    @for (int i = 0; i < Model.QuestionImages.Count; i++)
                                     {
-                                        var image = Model.QuestionImage[i];
+                                        var image = Model.QuestionImages[i].MediaName+ Model.QuestionImages[i].MediaType;
                                         <div class="carousel-item @(i == 0 ? "active" : "") w-100 h-100">
                                             <img src="@Url.Content("~/content/QuestionImage/" + image)"
                                                  class="d-block"
@@ -176,7 +176,7 @@
                                     }
                                 </div>
 
-                                @if (Model.QuestionImage.Count > 1)
+                                @if (Model.QuestionImages.Count > 1)
                                 {
                                     <button class="carousel-control-prev" type="button" data-bs-target="#questionImageCarousel" data-bs-slide="prev">
                                         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -188,7 +188,7 @@
                                     </button>
 
                                     <div class="carousel-indicators">
-                                        @for (int i = 0; i < Model.QuestionImage.Count; i++)
+                                        @for (int i = 0; i < Model.QuestionImages.Count; i++)
                                         {
                                             <button type="button" data-bs-target="#questionImageCarousel" data-bs-slide-to="@i"
                                                     class="@(i == 0 ? "active" : "")"
