--- a/DemoMVC.WebUi/Views/Exam/_ExamQuestionsPartial.cshtml
+++ b/DemoMVC.WebUi/Views/Exam/_ExamQuestionsPartial.cshtml
@@ -42,11 +42,12 @@
     <div class="card shadow-sm p-3 mb-4">
         <h5 class="fw-bold">Q@(i + 1): @question.QuestionText (Marks: @question.Marks)</h5>
 
-        @if (question.QuestionImage != null && question.QuestionImage.Any())
-        {
-            foreach (var image in question.QuestionImage)
-            {
-                <img src="~/content/QuestionImage/@image" class="img-fluid mb-2" style="max-width: 600px; min-height:200px" />
+        @if (question.QuestionImages != null && question.QuestionImages.Any())
+                    {
+                        foreach (var image in question.QuestionImages)
+                        {
+                            var s = image.MediaName + image.MediaType;
+                <img src="~/content/QuestionImage/@s" class="img-fluid mb-2" style="max-width: 600px; min-height:200px" />
             }
         }
 
