--- a/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
+++ b/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
@@ -15,12 +15,62 @@
     bool AllowedAdd = _base.CheckPermission(formCode, AccessPermission.IsAdd);
     bool AllowedDelete = _base.CheckPermission(formCode, AccessPermission.IsDelete);
 }
+<style>
+    .form-label {
+        font-weight: 600;
+        color: #2c3e50;
+        margin-top: 8px;
+        margin-bottom: 8px;
+        font-size: 15px;
+    }
 
-<div class="d-flex justify-content-between align-items-center m-2">
-    <h2 class="fw-bold mx-3 ">Users</h2>
-    <div>
-        @Html.ActionLink("Create New", "Create", null, new { @class = "btn btn-warning btn rounded-pill px-4 shadow-sm fw-bold m-3" })
-        @Html.ActionLink("Export Excel", "ExportUserProfiles", null, new { @class = "btn btn-success btn rounded-pill px-4 shadow-sm fw-bold m-3" })
+    .form-select {
+        padding: 10px 14px;
+        border: 1px solid #dee2e6;
+        border-radius: 8px;
+        font-size: 15px;
+        transition: all 0.3s;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.03);
+    }
+
+    .input-group .form-control {
+        min-height: 40px;
+        border-left: none;
+        border-radius: 0 8px 8px 0;
+        font-size: 15px;
+    }
+
+    .input-group-text {
+        background-color: #fff;
+        border-right: none;
+        border-radius: 8px 0 0 8px;
+    }
+
+    #gridSearchBox {
+        margin-right: 10px
+    }
+</style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
+<div class="d-flex justify-content-between align-items-center m-3 flex-wrap gap-3">
+    <h2 class="fw-bold m-0">Users</h2>
+
+    <div class="d-flex align-items-center gap-2">
+        <div class="input-group" style="min-width: 250px;">
+            <span class="input-group-text bg-white border-end-0">
+                <i class="bi bi-search text-muted"></i>
+            </span>
+            @Html.TextBox("gridSearchBox", null, new
+            {
+                @class = "form-control border-start-0",
+                placeholder = "Search..."
+            })
+        </div>
+
+        @Html.ActionLink("Create New", "Create", null, new
+        {
+            @class = "btn btn-warning rounded-pill mx-2 px-4 shadow-sm fw-bold"
+        })
+        @Html.ActionLink("Export Excel", "ExportUserProfiles", null, new { @class = "btn btn-success btn rounded-pill px-4 shadow-sm fw-bold" })
     </div>
 </div>
 <div class="common_white_box listingpage m-4">
@@ -62,7 +112,8 @@
         .DataSource(dataSource => dataSource
             .Ajax()
             .Sort(sortable=>sortable.Add("UpdatedOn").Descending())
-            .Read(read => read.Action("User_Read", "UserProfile")).PageSize(10)
+            .Read(read => read.Action("User_Read", "UserProfile").Data("getFilterData"))
+            .PageSize(10)
         ))
 </div>
 <script>
@@ -70,4 +121,15 @@
         var grid = $("#gridUserProfile").data("kendoGrid");
         grid.saveAsExcel();
     }
+    function getFilterData() {
+        return {
+            searchTerm: $("#gridSearchBox").val()
+        };
+    }
+    $(document).ready(function () {
+
+        $('#gridSearchBox').on('input', function () {
+            $('#gridUserProfile').data('kendoGrid').dataSource.read();
+        });
+    });
 </script>
