--- a/DemoMVC.WebUi/Views/QuestionType/Index.cshtml
+++ b/DemoMVC.WebUi/Views/QuestionType/Index.cshtml
@@ -54,7 +54,7 @@
     }
 </style>
 <div class="d-flex justify-content-between align-items-center m-3 flex-wrap gap-3">
-    <h2 class="fw-bold m-0">QuestionType</h2>
+    <h2 class="fw-bold mx-2">QuestionType</h2>
 
     <div class="d-flex align-items-center gap-2">
         <div class="input-group" style="min-width: 250px;">
