--- a/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
+++ b/DemoMVC.WebUi/Views/UserProfile/Index.cshtml
@@ -52,7 +52,7 @@
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
 <div class="d-flex justify-content-between align-items-center m-3 flex-wrap gap-3">
-    <h2 class="fw-bold m-0">Users</h2>
+    <h2 class="fw-bold mx-2 pt-3">Users</h2>
 
     <div class="d-flex align-items-center gap-2">
         <div class="input-group" style="min-width: 250px;">
